--- a/sites/all/themes/campsite/sass/partials/_menu.scss
+++ b/sites/all/themes/campsite/sass/partials/_menu.scss
@@ -25,7 +25,7 @@
     line-height: 1.5em;
     padding-bottom: -5px; /* This moves the dropdown menu*/
   }
-  
+
   h2 {
     text-transform: uppercase;
     float: left;
@@ -38,7 +38,7 @@
   }
 
 
-  a {   
+  a {
     &:link {
       text-decoration: none;
     }
@@ -47,10 +47,10 @@
 }
 
 #page {
-  /* 
+  /*
     When mobile nav is open, overflow some elements
-    that have negative margin that impedees into the mobile 
-    navigation. 
+    that have negative margin that impedees into the mobile
+    navigation.
    */
   &.open {
     #content,
@@ -62,7 +62,7 @@
 
 
 @media all and (max-width: 860px) {
-  
+
   #mobile-nav-button,
   #navigation h2,
   #navigation ul{
@@ -99,28 +99,28 @@
       width: 250px;
       margin: 0;
     }
-    
+
     li {
       display: block;
       float: none;
       // padding: .5em 1em;
       // border-bottom: 1px solid $dark;
-      
+
       &.last {
         border: 0;
       }
     }
-    
+
     a {
       display: block;
       padding: .5em 1em;
       color: #fff;
-    
+
       &:hover {
         text-decoration: none;
         background: $dark;
       }
-    
+
       &:before {
         content: "-";
         float: right;
@@ -136,9 +136,11 @@
 
   #page.open {
     -webkit-transform: translate3d(250px, 0, 0);
-
+    // @TODO
+    // I need to clean this code up, there is a better way to do this for sure.
+    width: calc(100% - 250px);
     #navigation ul.menu {
-      
+
     }
   }
 }
@@ -172,14 +174,14 @@
       text-align: center;
       font-weight: normal;
     }
-  
+
     li.last:after {
       content: "";
     }
-    
+
     a {
       color: $dark;
-            
+
       &:hover {
         text-decoration: underline;
       }
